@@ -191,6 +191,8 @@ function blank_degrees_display_blank_degree() {
       
   fp_set_page_sub_tabs($tab_array);
   
+  watchdog("blank_degrees", "User viewed blank degree: @year,@degree,@title", array("@year" => $blank_catalog_year, "@degree" => $blank_degree_id, "@title" => $title), WATCHDOG_DEBUG);
+  
   
   return $rtn;
   
